--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-requests==2.31.0
-beautifulsoup4==4.12.2
-pandas==2.2.1     
-numpy==1.26.4      
-matplotlib==3.8.2
-seaborn==0.13.2
-mysql-connector-python==8.3.0
+requests: 2.31.0
+beautifulsoup4: 4.12.2
+pandas: 2.2.3
+numpy: 1.26.4
+matplotlib: 3.8.2
+seaborn: 0.13.2
+mysql-connector-python: 9.2.0
